static/css/style.css
@font-face {
	font-family: "Anaktoria";
	src: url("../fonts/anaktoria.woff") format("woff");
	font-weight: normal;
	font-style: normal;
	font-display: swap;
}

* {
	padding: 0;
	margin: 0;
	box-sizing: border-box;
}

html {
	scroll-behavior: smooth;
}

body {
	background-color: black;
	color: #fafafa;
	font-family: "Poppins", sans-serif;
	display: flex;
	flex-direction: column;
	align-items: center;
}

header {
	width: 100%;
	height: 5vh;
	display: flex;
	justify-content: flex-end;
	align-items: center;
}

nav ul {
	display: flex;
	list-style: none;
	margin: 0.5em 1em;
}

nav li {
	padding: 0 0.5em;
}

a {
	color: var(--text-color);
	text-decoration-thickness: 1px;
	text-decoration-color: #ffffffb0;
	text-underline-offset: 4px;
	transition: all 0.1s ease-in;
}

a:hover {
	text-decoration-color: var(--text-color);
}

nav li a {
	padding: 0.75em;
}

h1 {
	font-family: "Anaktoria";
	font-size: 65px;
	font-size: clamp(60px, 12vw, 100px);
	letter-spacing: 8px;
	margin: 1em 0.5em 0.5em 0.5em;
	text-align: center;
}

h2 {
	text-align: center;
	margin: 0 1em;
	font-size: 20px;
	font-size: clamp(20px, 2vw, 25px);
}

#cta-wrapper {
	margin: 10em 0 5em 0;
	display: flex;
	flex-wrap: wrap;
	justify-content: center;
}

#cta-wrapper a:hover {
	box-shadow: 0 0 8px #bdbdbd;
}

#white-bg-cta {
	color: black;
	background-color: #e0e0e0;
	margin: 1em 0.5em;
	padding: 0.25em 0.75em;
	border-radius: 40px;
	font-size: 25px;
	font-size: clamp(21px, 3vw, 30px);
	text-decoration: none;
	text-align: center;
}

.black-bg-cta {
	color: #fafafa;
	margin: 1em 0.5em;
	padding: 0.25em 0.75em;
	border: 2px solid #fafafa;
	border-radius: 40px;
	font-size: 25px;
	font-size: clamp(20px, 3vw, 30px);
	text-decoration: none;
	text-align: center;
}

#main-content {
	width: 90vw;
	display: flex;
	flex-direction: column;
	align-items: flex-start;
	margin: 2em 0;
}

#main-content h2 {
	margin: 1em 0 0.5em 0;
}

#main-content h3 {
	margin: 0.75em 0 0.5em 0;
}

#main-content > ul > li {
	margin-bottom: 0.75em;
}

.full-horizontal-border {
	width: 100%;
	border-bottom: 1px solid #424242;
}

.event {
	width: 100%;
	margin-bottom: 2em;
	padding-bottom: 1.5em;
	border-bottom: 1px solid #424242;
}

.event-detail:last-of-type,
.event-date {
	margin-bottom: 1.5em;
}

.event-grid {
	display: grid;
	grid-template-columns: repeat(auto-fit, minmax(600px, 1fr));
	gap: 1em;
}

.event-grid img {
	width: 100%;
	max-width: 90vw;
	border-radius: 5px;
}

.event-grid iframe {
	border-radius: 5px;
	width: 100%;
	max-width: 90vw;
	aspect-ratio: 16/9;
}

.one-event-grid iframe,
.one-event-grid img {
	width: 50%;
}

ul {
	margin-left: 1em;
}

p {
	margin-bottom: 1em;
}

#google-form-iframe {
	background-color: #f6f6f6;
	border-radius: 5px;
	color: #e0e0e0;
	width: 50vw;
	min-height: 2600px;
	margin: 0;
	border: none;
}

footer {
	margin: 2em 0.5em;
}

@media screen and (max-width: 1200px) {
	#google-form-iframe {
		width: 85vw;
	}
}

@media screen and (max-width: 1024px) {
	.team-container {
		flex-direction: column;
	}

	.one-event-grid iframe,
	.one-event-grid img {
		width: 100%;
	}
}

@media screen and (max-width: 600px) {
	h1 {
		letter-spacing: 5px;
	}

	#cta-wrapper {
		display: flex;
		flex-direction: column;
		margin: 5em 0 3em 0;
	}

	a {
		word-break: break-all;
	}

	a img {
		width: 20vw;
		height: auto;
	}
}

.clickable {
	cursor: pointer;
}

/* ======================================================= BURGER MENU ===================================================== */

.navbar-ul {
	margin: 0;
}

.burger-menu {
	padding: 0.5em;
}

.burger-menu:hover {
	cursor: pointer;
}

.line-1,
.line-2,
.line-3 {
	width: 25px;
	height: 1.5px;
	background-color: #fafafa;
	margin: 5px;
}

.burger-menu-dropdown {
	display: flex;
	flex-direction: column;
	position: absolute;
	top: 5vh;
	right: 1.5vh;
	padding: 0.5em 0em;
	z-index: 1;
	border-radius: 5px;
	background-color: black;
	border: 1px solid #424242;
}

.burger-menu-dropdown li {
	display: flex;
	justify-content: flex-end;
	margin-left: 0;
	padding: 0 0.5em 0 2em;
}

.hide-burger-menu {
	display: none;
}

/* ==================================================== SCROLLBAR =========================================================== */

body::-webkit-scrollbar {
	width: 0.7em;
}

body::-webkit-scrollbar-track {
	background-color: #212121;
}

body::-webkit-scrollbar-thumb {
	background-color: #616161;
	border-radius: 2px;
}

